--- a/TODO
+++ b/TODO
@@ -1,10 +1,16 @@
-Add Numeric aliases
+Create a font sample sheet
+ - See FontFactory
 
-Ensure users do NOT use uppercase codes or aliases
+In docs, mention lowercase and numbers for aliases
 
 =done:
 2025-08-04:
+
 # used FFT1 and added more special aliases
 # tested codes and aliases to ensure no overlaps
 Fix problem with alias names.
   - consider using the system FontFactory::Type1 uses
+
+Add Numeric aliases
+
+Ensure users do NOT use uppercase codes or aliases
