--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-Create a font sample sheet
+See my unpublished Font::Utils for FontFreeFace
+  for using David's Font::FreeType
+
+reate a font sample sheet
  - See FontFactory
 
 In docs, mention lowercase and numbers for aliases
